--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bincode = "2.0.0-alpha.2"
+bincode_derive = "2.0.0-alpha.2"
 clap = { version = "^3.0.0-rc.8", features = [
 	"derive",
 	"cargo",
@@ -13,7 +15,7 @@ clap = { version = "^3.0.0-rc.8", features = [
 ], default_features = false }
 env_logger = "0.9.0"
 log = "0.4.14"
-speedy = "^0.8.0"
-speedy-derive = "^0.8.0"
+num_enum = "0.5.6"
+serialport = "4.0.1"
 
 [features]
