--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bincode = "2.0.0-alpha.2"
-bincode_derive = "2.0.0-alpha.2"
 clap = { version = "^3.0.0-rc.8", features = [
 	"derive",
 	"cargo",
@@ -14,8 +12,12 @@ clap = { version = "^3.0.0-rc.8", features = [
 	"suggestions",
 ], default_features = false }
 env_logger = "0.9.0"
+encde = { path = "encde", features = ["derive"] }
 log = "0.4.14"
 num_enum = "0.5.6"
 serialport = "4.0.1"
 
 [features]
+
+[workspace]
+members = [".", "encde", "encde/derive"]
