--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,10 @@ clap = { version = "^3.0.0-rc.8", features = [
 	"std",
 	"suggestions",
 ], default_features = false }
-env_logger = "0.9.0"
 encde = { path = "encde", features = ["derive"] }
 log = "0.4.14"
 num_enum = "0.5.6"
+phf = { version = "0.10", features = ["macros"] }
 serialport = "4.0.1"
 
 [features]
