--- a/encde/Cargo.toml
+++ b/encde/Cargo.toml
@@ -2,6 +2,7 @@
 name = "encde"
 version = "0.1.0"
 edition = "2021"
+workspace = ".."
 
 [dependencies]
 encde_derive = { path = "derive", optional = true }
