--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.19"
 clap = { version = "^3.0.0-rc.8", features = [
 	"derive",
 	"cargo",
