--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.19"
-clap = { version = "^3.0.0-rc.8", features = [
+clap = { version = "3.0.5", features = [
 	"derive",
 	"cargo",
 	"unicode",
