--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,12 @@ clap = { version = "3.0.5", features = [
 	"std",
 	"suggestions",
 ], default_features = false }
+clap-num = "1.0.0"
 encde = { path = "encde", features = ["derive"] }
 log = "0.4.14"
 num_enum = "0.5.6"
 phf = { version = "0.10", features = ["macros"] }
+rand = "0.8.4"
 serialport = "4.0.1"
 
 [features]
