--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,8 @@ serde_ini = "0.2.0"
 
 [features]
 
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.30.0", features = ["Win32_Foundation", "Win32_Devices_Usb", "Win32_Storage_FileSystem", "Win32_Security"] }
+
 [workspace]
 members = [".", "encde", "encde/derive"]
