Use ANSI colors for logging
This uses the `colorize` crate to only add colors when it should. It's very polite w/r/t `CLI_COLORS` and the like.

This finishes task 1 of #6, but GitHub doesn't know that.

--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -12,6 +12,7 @@ clap = { version = "3.0.5", features = [
 	"suggestions",
 ], default_features = false }
 clap-num = "1.0.0"
+colored = "2.0.0"
 lazy_static = "1.4.0"
 log = "0.4.14"
 phf = { version = "0.10", features = ["macros"] }
