--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.53"
 clap = { version = "3.0.5", features = [
 	"derive",
 	"cargo",
